Contrast fix and OG card fix

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -45,7 +45,7 @@
 
     /* Typography */
     --md-typeset-h1-font-weight: 600;
-    --p-color: hsl(0deg 0% 100% / 55%);
+    --p-color: hsl(0deg 0% 100% / 70%);
 
     /* Code */
     --md-code-fg-color: #e6e6e6;
